<resources>
    <string name="app_name">Grocery List Managee</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="home_page_title">Home Page</string>
    <string name="user_lists_title">User Lists</string>
    <string name="create_new_list">Create New</string>
    <string name="create_list">Create List</string>
    <string name="delete_list">Delete List</string>
    <string name="delete">Delete</string>
    <string name="list_title">Create New List</string>
    <string name="list_name">List Name:</string>
    <string name="delete_list_title">Delete a List</string>
    <string name="list_detail_titile">Existing List</string>
    <string name="list">List</string>
    <string name="item">Item</string>
    <string name="Type">Type</string>
    <string name="mark_all_option">Mark All Option</string>
    <string name="item_quanity">10</string>
    <string name="edit_quanity">Edit Quantity</string>
    <string name="add_item">Add Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="mark_all_options">Mark All Options</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">UnSelect All</string>
    <string name="editing_quanity">Editing Quanity</string>
    <string name="change_quanity">Change Quanity</string>
    <string name="search_tool">Search Tool</string>
    <string name="search">Search:</string>
    <string name="clear">Clear</string>
    <string name="by_category">Type</string>
    <string name="by_name">Item</string>
    <string name="back_to_list">Back to List</string>
    <string name="create_new_item">Create New Item</string>
    <string name="category">Category</string>
    <string name="create_item">Create Item</string>
    <string name="item_name">Item Name:</string>
    <string name="confirm_item_name">Confirm Item Name</string>
    <string name="dairy">Dairy</string>
    <string name="meat">Meat</string>
    <string name="frozen">Frozen</string>
    <string name="fishseafood">Fish/SeaFood</string>
    <string name="produce">Produce</string>
    <string name="select_category">Select Category for Item</string>
    <string name="confirm_category">Confirm Category</string>
    <string name="Cancel">Cancel</string>
    <string name="Update">Update</string>
    <string name="search_item">Search Item</string>
    <string name="search_here">Search Here</string>

</resources>