<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.SearchItemActivity">

    <TextView
        android:id="@+id/searchItemTitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_item"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_25sdp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp">
    </TextView>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/item" />

        <RadioButton
            android:id="@+id/radioType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/Type" />
    </RadioGroup>

    <EditText
        android:id="@+id/searchInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/search_here" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Search_Box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">
        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>

    <!--
    <fragment
        android:id="@+id/InputFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
     -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/search"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>
</LinearLayout>