<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activites.ListDetailsActivity">

    <TextView
        android:id="@+id/listDetailsTitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_detail_titile"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_30sdp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/colorBlack">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="@dimen/_50sdp"
        android:id="@+id/item_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/li_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/editQuanity_btn"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_45sdp"
                android:textAllCaps="false"
                android:text="@string/edit_quanity">
            </androidx.appcompat.widget.AppCompatButton>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addItem_btn"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_45sdp"
                android:textAllCaps="false"
                android:text="@string/add_item">
            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/userLists_btn"
                android:layout_width="@dimen/_70sdp"
                android:textAllCaps="false"
                android:layout_toEndOf="@id/addItem_btn"
                android:layout_height="@dimen/_45sdp"
                android:text="@string/user_lists_title">
            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/li_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/li_2"

            android:layout_marginLeft="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_all_option"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_15sdp">

            </TextView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/selectAll_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:textAllCaps="false"
                android:text="@string/select_all">
            </androidx.appcompat.widget.AppCompatButton>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/unSlectAll_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/unselect_all"
                android:textAllCaps="false">
            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>







    </RelativeLayout>





</LinearLayout>
</ScrollView>