<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activites.HomeActivity">

    <TextView
        android:id="@+id/homePageTitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_page_title"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_25sdp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp">
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp">
        <TextView
            android:id="@+id/userLists_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_lists_title"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/colorBlack">
        </TextView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lists_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userLists_tv"
            android:layout_marginTop="@dimen/_10sdp">
        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/newList_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_list"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteList_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/delete_list"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>


</LinearLayout>
</ScrollView>