<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.CreateItemActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/itemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_item"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="@dimen/_25sdp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp">


        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp">
        </TextView>

        <EditText
            android:id="@+id/itemName_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp">

        </EditText>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirmItemName"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm_item_name"
        android:layout_marginTop="@dimen/_60sdp">

    </androidx.appcompat.widget.AppCompatButton>


</LinearLayout>