<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activites.CreateNewListActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_title"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp">
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        >

        <TextView
            android:id="@+id/listNameTitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_name"
            android:textColor="@color/black"
            android:layout_margin="@dimen/_15sdp"
            android:textSize="@dimen/_20sdp">
        </TextView>


        <EditText
            android:id="@+id/listName_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/listNameTitle_tv"
            android:layout_margin="@dimen/_15sdp"
            android:textColor="@color/black">
        </EditText>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createList_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/listName_et"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/create_list"
            android:textAllCaps="false">

        </androidx.appcompat.widget.AppCompatButton>





    </RelativeLayout>



</LinearLayout>