<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.DeleteItemActivity">

    <TextView
        android:id="@+id/deleteItemTitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_item"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_25sdp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp">
    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Delete_Box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">
        </androidx.recyclerview.widget.RecyclerView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="@string/Update"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>
</LinearLayout>