<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activites.AddItemActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_tool"
        android:textSize="@dimen/_30sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp">

    </TextView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_15sdp">

        </TextView>

        <EditText
            android:id="@+id/search_et"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_width="@dimen/_160sdp"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content">
        </EditText>

        <androidx.appcompat.widget.AppCompatButton
            android:visibility="gone"
            android:id="@+id/clear_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textAllCaps="false">

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartegory_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp">

    </androidx.recyclerview.widget.RecyclerView>
    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/items_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp">

    </androidx.recyclerview.widget.RecyclerView>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_gravity="center"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backToList_btn"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:text="@string/back_to_list"
            android:textColor="@color/colorBlack"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createNewItem_btn"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:text="@string/create_new_item"
            android:layout_marginLeft="@dimen/_5sdp"
            android:textColor="@color/colorBlack"
            android:onClick="createNewItem"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addtolist"
        android:layout_gravity="center"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:text="Add to list"
        android:layout_marginLeft="@dimen/_5sdp"
        android:textColor="@color/colorBlack"
        android:textAllCaps="false">
    </androidx.appcompat.widget.AppCompatButton>



</LinearLayout>
</ScrollView>