<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="@dimen/_25sdp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp">


        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBlack"
            android:layout_margin="20dp">

        </EditText>

        <EditText
            android:id="@+id/password_et"
            android:layout_below="@id/email_et"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

        </EditText>
    </RelativeLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@color/btnshpascolor">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_btn"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center_horizontal"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@color/btnshpascolor">
    </androidx.appcompat.widget.AppCompatButton>





</LinearLayout>